[metadata]
name = track_analysis
version = 0.0.0
description = Routines and scripts for helping with tropical cyclone track analysis
long_description = file: README.md

[options]
install_requires =
    numpy
    matplotlib
    xarray
    scipy
    pandas
    shapely
    dask
    rioxarray
package_dir=
    =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src